aligning the car on our service page to the center and making it fixed

--- a/style.css
+++ b/style.css
@@ -287,37 +287,17 @@ nav ul li a{
     z-index: 100;
     width: 400px;
 } */
-.bre{
-    text-align: center;
-    width: 170px;
-    padding-left: 45%;
-    padding-bottom: 40px;
-}
-.bre h3{
-    color: red;
-    font-size: large;
-}
-.bre p{
-    color: black;
-    font-size: small;  
-}
-.bre button{
-    color: red;
-    border: none;
-    background-color: transparent;
-    border-radius: 5px;
-}
 
 .together1{
     padding: 20px;
     padding-top: 0;
     width: 400px;
-    padding-left: 5px;
+    padding-left: 0;
  }
  .together1 .eng{
     text-align: center;
     width: 170px;
-    margin-left: 300px;
+    margin-left: 250px;
     margin-right: 15%;
     padding-bottom: 20px;
  }
@@ -336,10 +316,10 @@ nav ul li a{
     border-radius: 5px;
  }
 .together1 .bat{
-    padding-top: 20px;
+    padding-top: 150px;
     text-align: center;
     width: 170px;
-    margin-left: 200px;
+    margin-left: 150px;
     padding-right: 30%;
 }
 .together1 .bat h3{
@@ -355,16 +335,6 @@ nav ul li a{
     border: none;
     background-color: transparent;
     border-radius: 5px;
-}
-
-.car{
-    align-items: center;
-    text-align: center;
-}
-.car img{
-    padding-left: 15%;
-    height: auto;   
-    width: 400px;
 }
 
 .together{
@@ -399,7 +369,7 @@ nav ul li a{
     width: 170px;
     margin-right: 200px;
     padding-left: 30%;
-    padding-top: 20px;
+    padding-top: 150px;
 }
 .together .ste h3{
     color: red;
@@ -419,11 +389,50 @@ nav ul li a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 80px;
-    gap: 50px;
+}
+.wow{
+    margin-right: 25px;
+    margin-left: 25px;
 }
 .pamoja{
     text-align: center;
-    width: 400px;
-    padding-top: 0;
 }
+.pamoja .bre{
+    text-align: center;
+    width: 170px;
+    
+}
+.car img{
+    width: 400px;
+    height: 350px;
+    border-radius: 10px;
+}
+.bre{
+    width: 170px;
+    padding-left: 33%;
+    padding-bottom: 40px;
+}
+.bre h3{
+    color: red;
+    font-size: large;
+}
+.bre p{
+    color: black;
+    font-size: small;  
+}
+.bre button{
+    color: red;
+    border: none;
+    background-color: transparent;
+    border-radius: 5px;
+}
+.car button{
+    color: white;
+    border: red;
+    background-color: red;
+    border-radius: 20px;
+    height: 40px;
+    width: 170px;
+}
+
+
